style: further line-tool and chart alignment fixes

--- a/apps/picsa-tools/climate-tool/src/app/components/chart-layout/chart-layout.scss
+++ b/apps/picsa-tools/climate-tool/src/app/components/chart-layout/chart-layout.scss
@@ -1,24 +1,27 @@
 :host {
   display: grid;
   grid-template-columns: 60px 1fr;
+  // fit the chart to aline line-tool with chart, description underneat and probability tools
   grid-template-areas:
     'line chart'
-    'line chart'
-    '...  desc'
+    'blank  desc'
     'prob prob';
+  // ensure the chart fits a minimum of 400px, with a target height of 60vh
+  grid-template-rows: minmax(400px, 60vh) auto auto;
 }
 
 climate-line-tool {
   grid-area: line;
+  // offset chart title/dates with padding to line up
+  padding-top: 29px;
+  padding-bottom: 17px;
 }
 
 picsa-chart {
   grid-area: chart;
   margin-right: 3rem;
-  flex: 1;
   overflow: auto;
   min-width: 500px;
-  min-height: 400px;
 }
 
 .chart-definition {
